--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -49,7 +49,8 @@ name: R-CMD-check-bioc
 ## Note that you can always run a GHA test without the cache by using the word
 ## "/nocache" in the commit message.
 env:
-  has_testthat: 'false'
+  has_testthat: 'true'
+  run_testthat3: 'true'
   run_covr: 'false'
   run_pkgdown: 'true'
   has_RUnit: 'false'
@@ -249,6 +250,12 @@ jobs:
           ## run the tests on all operating systems.
           BiocCheck::BiocCheck(dir('check', 'tar.gz$', full.names = TRUE), `no-check-R-ver` = TRUE, `no-check-bioc-help` = TRUE)
           ## For more options check http://bioconductor.org/packages/release/bioc/vignettes/BiocCheck/inst/doc/BiocCheck.html
+        shell: Rscript {0}
+
+      - name: Install testthat 3ed
+        if: github.ref == 'refs/heads/master' && env.run_testthat3 == 'true'
+        run: |
+          remotes::install_github("r-lib/testthat")
         shell: Rscript {0}
 
       - name: Install covr
